// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`All AIML examples for docs Ensure FinalStateTest is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-75",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-69",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": 
"## name: FinalStateTest
description: Tests that the final state is always present and leaf nodes transition to it<workflow id="main"><state id="start"><llm><prompt></prompt></llm></state><state id="another_state"><llm><prompt></prompt></llm><transition target="third_state" /></state><state id="third_state"><llm><prompt></prompt></llm></state>"
,
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 11,
            "columnStart": 1,
            "key": "aiml-70",
            "lineEnd": 33,
            "lineStart": 2,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-1",
            },
            "children": [],
            "columnEnd": 11,
            "columnStart": 1,
            "key": "aiml-76",
            "lineEnd": 33,
            "lineStart": 2,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 11,
        "columnStart": 1,
        "key": "aiml-71",
        "lineEnd": 33,
        "lineStart": 2,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-1",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "</workflow>",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 12,
            "columnStart": 1,
            "key": "aiml-72",
            "lineEnd": 36,
            "lineStart": 36,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-1",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 12,
                "columnStart": 1,
                "key": "aiml-78",
                "lineEnd": 36,
                "lineStart": 36,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-1",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 12,
            "columnStart": 1,
            "key": "aiml-77",
            "lineEnd": 36,
            "lineStart": 36,
            "parentId": "root-state-1",
            "scope": [
              "root",
              "root-state-1",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 12,
        "columnStart": 1,
        "key": "aiml-73",
        "lineEnd": 36,
        "lineStart": 36,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-1",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-74",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-68",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;

exports[`All AIML examples for docs Ensure InvestmentAdvisor is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-145",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-131",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": 
"## name: InvestmentAdvisor
inputSchema:
type: object
properties:
investmentGoal:
type: string
description: The financial goal of the investment
riskTolerance:
type: string
enum: ["low", "medium", "high"]
description: The risk tolerance of the investor
timeHorizon:
type: integer
description: Investment time horizon in years
initialInvestment:
type: number
description: Initial investment amount in USD
root: true"
,
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 4,
            "columnStart": 1,
            "key": "aiml-132",
            "lineEnd": 20,
            "lineStart": 2,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-1",
            },
            "children": [],
            "columnEnd": 4,
            "columnStart": 1,
            "key": "aiml-146",
            "lineEnd": 20,
            "lineStart": 2,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 4,
        "columnStart": 1,
        "key": "aiml-133",
        "lineEnd": 20,
        "lineStart": 2,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-1",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "<workflow initial="profileAssessment"><datamodel><data id="investmentGoal" type="string">",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 45,
            "columnStart": 1,
            "key": "aiml-134",
            "lineEnd": 41,
            "lineStart": 39,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-1",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-2",
            },
            "children": [],
            "columnEnd": 45,
            "columnStart": 1,
            "key": "aiml-147",
            "lineEnd": 41,
            "lineStart": 39,
            "parentId": "root-state-1",
            "scope": [
              "root",
              "root-state-1",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 45,
        "columnStart": 1,
        "key": "aiml-135",
        "lineEnd": 41,
        "lineStart": 39,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-1",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-2",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "</data><data id="riskTolerance" type="string">",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 44,
            "columnStart": 86,
            "key": "aiml-136",
            "lineEnd": 42,
            "lineStart": 41,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-2",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-3",
            },
            "children": [],
            "columnEnd": 44,
            "columnStart": 86,
            "key": "aiml-148",
            "lineEnd": 42,
            "lineStart": 41,
            "parentId": "root-state-2",
            "scope": [
              "root",
              "root-state-2",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 44,
        "columnStart": 86,
        "key": "aiml-137",
        "lineEnd": 42,
        "lineStart": 41,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-2",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-3",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "</data><data id="timeHorizon" type="integer">",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 43,
            "columnStart": 84,
            "key": "aiml-138",
            "lineEnd": 43,
            "lineStart": 42,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-3",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-4",
            },
            "children": [],
            "columnEnd": 43,
            "columnStart": 84,
            "key": "aiml-149",
            "lineEnd": 43,
            "lineStart": 42,
            "parentId": "root-state-3",
            "scope": [
              "root",
              "root-state-3",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 43,
        "columnStart": 84,
        "key": "aiml-139",
        "lineEnd": 43,
        "lineStart": 42,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-3",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-4",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "</data><data id="initialInvestment" type="number">",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 48,
            "columnStart": 81,
            "key": "aiml-140",
            "lineEnd": 44,
            "lineStart": 43,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-4",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-5",
            },
            "children": [],
            "columnEnd": 48,
            "columnStart": 81,
            "key": "aiml-150",
            "lineEnd": 44,
            "lineStart": 43,
            "parentId": "root-state-4",
            "scope": [
              "root",
              "root-state-4",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 48,
        "columnStart": 81,
        "key": "aiml-141",
        "lineEnd": 44,
        "lineStart": 43,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-4",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-5",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": 
"</data><data id="profile" type="json" value={{}} /><data id="assetAllocation" type="json" value={{}} schema={{
      type: "object",
      properties: {
        stocks: { type: "number" },
        bonds: { type: "number" },
        cash: { type: "number" }
      },
      required: ["stocks", "bonds", "cash"]
    }} /><data id="portfolioRecommendation" type="json" value={{}} schema={{
      type: "object",
      properties: {
        stocks: { type: "number" },
        bonds: { type: "number" },
        cash: { type: "number" }
      },
      required: ["stocks", "bonds", "cash"]
    }} /><data id="marketAnalysis" type="string" value={""} /></datamodel><ProfileAssessment /><MarketAnalysis /><AssetAllocation /><PortfolioRecommendation /><PresentRecommendation /></workflow>"
,
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 12,
            "columnStart": 92,
            "key": "aiml-142",
            "lineEnd": 72,
            "lineStart": 44,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-5",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 12,
                "columnStart": 92,
                "key": "aiml-152",
                "lineEnd": 72,
                "lineStart": 44,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-5",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 12,
            "columnStart": 92,
            "key": "aiml-151",
            "lineEnd": 72,
            "lineStart": 44,
            "parentId": "root-state-5",
            "scope": [
              "root",
              "root-state-5",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 12,
        "columnStart": 92,
        "key": "aiml-143",
        "lineEnd": 72,
        "lineStart": 44,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-5",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-144",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-130",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;

exports[`All AIML examples for docs Ensure JustPrompt is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-165",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-161",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "<someOtherTag></someOtherTag>",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 16,
            "columnStart": 1,
            "key": "aiml-162",
            "lineEnd": 7,
            "lineStart": 1,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 16,
                "columnStart": 1,
                "key": "aiml-167",
                "lineEnd": 7,
                "lineStart": 1,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-0",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 16,
            "columnStart": 1,
            "key": "aiml-166",
            "lineEnd": 7,
            "lineStart": 1,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 16,
        "columnStart": 1,
        "key": "aiml-163",
        "lineEnd": 7,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-164",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-160",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;

exports[`All AIML examples for docs Ensure SimpleChain is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-220",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-208",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "## model: account/fireworks/model/deepseek-v3",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 4,
            "columnStart": 1,
            "key": "aiml-209",
            "lineEnd": 3,
            "lineStart": 2,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-1",
            },
            "children": [],
            "columnEnd": 4,
            "columnStart": 1,
            "key": "aiml-221",
            "lineEnd": 3,
            "lineStart": 2,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 4,
        "columnStart": 1,
        "key": "aiml-210",
        "lineEnd": 3,
        "lineStart": 2,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-1",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 23,
            "columnStart": 1,
            "key": "aiml-211",
            "lineEnd": 12,
            "lineStart": 10,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-1",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-2",
            },
            "children": [],
            "columnEnd": 23,
            "columnStart": 1,
            "key": "aiml-222",
            "lineEnd": 12,
            "lineStart": 10,
            "parentId": "root-state-1",
            "scope": [
              "root",
              "root-state-1",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 23,
        "columnStart": 1,
        "key": "aiml-212",
        "lineEnd": 12,
        "lineStart": 10,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-1",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-2",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "<llm model="account/fireworks/model/qwen-2.5-32b"><instructions>",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 19,
            "columnStart": 1,
            "key": "aiml-213",
            "lineEnd": 18,
            "lineStart": 17,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-2",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-3",
            },
            "children": [],
            "columnEnd": 19,
            "columnStart": 1,
            "key": "aiml-223",
            "lineEnd": 18,
            "lineStart": 17,
            "parentId": "root-state-2",
            "scope": [
              "root",
              "root-state-2",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 19,
        "columnStart": 1,
        "key": "aiml-214",
        "lineEnd": 18,
        "lineStart": 17,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-2",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-3",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "</instructions><prompt>",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 13,
            "columnStart": 9,
            "key": "aiml-215",
            "lineEnd": 22,
            "lineStart": 20,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-3",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-4",
            },
            "children": [],
            "columnEnd": 13,
            "columnStart": 9,
            "key": "aiml-224",
            "lineEnd": 22,
            "lineStart": 20,
            "parentId": "root-state-3",
            "scope": [
              "root",
              "root-state-3",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 13,
        "columnStart": 9,
        "key": "aiml-216",
        "lineEnd": 22,
        "lineStart": 20,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-3",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-4",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "</prompt></llm>",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 7,
            "columnStart": 5,
            "key": "aiml-217",
            "lineEnd": 25,
            "lineStart": 24,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-4",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 7,
                "columnStart": 5,
                "key": "aiml-226",
                "lineEnd": 25,
                "lineStart": 24,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-4",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 7,
            "columnStart": 5,
            "key": "aiml-225",
            "lineEnd": 25,
            "lineStart": 24,
            "parentId": "root-state-4",
            "scope": [
              "root",
              "root-state-4",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 7,
        "columnStart": 5,
        "key": "aiml-218",
        "lineEnd": 25,
        "lineStart": 24,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-4",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-219",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-207",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;

exports[`All AIML examples for docs Ensure SimpleRouter is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-265",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-261",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "<state id="Option_1" description="This is option 1, pick it if you love football"><llm><prompt></prompt></llm><transition target="end" /></state><state id="Option_2" description="This is option 2, pick it if you love basketball"><llm><prompt></prompt></llm><transition target="end" /></state><final id="end" />",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 19,
            "columnStart": 1,
            "key": "aiml-262",
            "lineEnd": 23,
            "lineStart": 1,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 19,
                "columnStart": 1,
                "key": "aiml-267",
                "lineEnd": 23,
                "lineStart": 1,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-0",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 19,
            "columnStart": 1,
            "key": "aiml-266",
            "lineEnd": 23,
            "lineStart": 1,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 19,
        "columnStart": 1,
        "key": "aiml-263",
        "lineEnd": 23,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-264",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-260",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;

exports[`All AIML examples for docs Ensure Character PersonaGenerator is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-7",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-3",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 2,
            "columnStart": 1,
            "key": "aiml-4",
            "lineEnd": 2,
            "lineStart": 1,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 2,
                "columnStart": 1,
                "key": "aiml-9",
                "lineEnd": 2,
                "lineStart": 1,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-0",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 2,
            "columnStart": 1,
            "key": "aiml-8",
            "lineEnd": 2,
            "lineStart": 1,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 2,
        "columnStart": 1,
        "key": "aiml-5",
        "lineEnd": 2,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-6",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-2",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;

exports[`All AIML examples for docs Ensure RecipeGenerator is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-183",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-179",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 2,
            "columnStart": 1,
            "key": "aiml-180",
            "lineEnd": 2,
            "lineStart": 1,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 2,
                "columnStart": 1,
                "key": "aiml-185",
                "lineEnd": 2,
                "lineStart": 1,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-0",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 2,
            "columnStart": 1,
            "key": "aiml-184",
            "lineEnd": 2,
            "lineStart": 1,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 2,
        "columnStart": 1,
        "key": "aiml-181",
        "lineEnd": 2,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-182",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-178",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;

exports[`All AIML examples for docs Ensure MedicalDiagnosis is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-174",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-170",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 2,
            "columnStart": 1,
            "key": "aiml-171",
            "lineEnd": 2,
            "lineStart": 1,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 2,
                "columnStart": 1,
                "key": "aiml-176",
                "lineEnd": 2,
                "lineStart": 1,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-0",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 2,
            "columnStart": 1,
            "key": "aiml-175",
            "lineEnd": 2,
            "lineStart": 1,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 2,
        "columnStart": 1,
        "key": "aiml-172",
        "lineEnd": 2,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-173",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-169",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;

exports[`All AIML examples for docs Ensure CodeReviewer is parsed correctly 1`] = `
[
  {
    "astSourceType": "element",
    "attributes": {
      "id": "workflow-root",
      "initial": "root-state-0",
    },
    "children": [
      {
        "astSourceType": "element",
        "attributes": {
          "id": "final",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "target": "root-state-0",
            },
            "children": [],
            "columnEnd": 1,
            "columnStart": 1,
            "key": "aiml-16",
            "lineEnd": 1,
            "lineStart": 1,
            "parentId": "final",
            "scope": [
              "root",
              "final",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "action",
          },
        ],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-12",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "final",
        ],
        "subType": "output",
        "tag": "final",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "root-state-0",
        },
        "children": [
          {
            "astSourceType": "element",
            "attributes": {
              "instructions": "",
              "model": "accounts/fireworks/models/llama-v3p1-8b-instruct",
              "prompt": "\${input}",
            },
            "children": [],
            "columnEnd": 2,
            "columnStart": 1,
            "key": "aiml-13",
            "lineEnd": 2,
            "lineStart": 1,
            "parentId": undefined,
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "model",
            "tag": "llm",
            "type": "action",
          },
          {
            "astSourceType": "element",
            "attributes": {
              "target": "final",
            },
            "children": [
              {
                "astSourceType": "element",
                "attributes": {
                  "target": "final",
                },
                "children": [],
                "columnEnd": 2,
                "columnStart": 1,
                "key": "aiml-18",
                "lineEnd": 2,
                "lineStart": 1,
                "parentId": undefined,
                "scope": [
                  "root",
                  "root-state-0",
                ],
                "subType": "action",
                "tag": "transition",
                "type": "state",
              },
            ],
            "columnEnd": 2,
            "columnStart": 1,
            "key": "aiml-17",
            "lineEnd": 2,
            "lineStart": 1,
            "parentId": "root-state-0",
            "scope": [
              "root",
              "root-state-0",
            ],
            "subType": "action",
            "tag": "transition",
            "type": "state",
          },
        ],
        "columnEnd": 2,
        "columnStart": 1,
        "key": "aiml-14",
        "lineEnd": 2,
        "lineStart": 1,
        "parentId": undefined,
        "scope": [
          "root",
          "root-state-0",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
      {
        "astSourceType": "element",
        "attributes": {
          "id": "error",
        },
        "children": [],
        "columnEnd": 1,
        "columnStart": 1,
        "key": "aiml-15",
        "lineEnd": 1,
        "lineStart": 1,
        "parentId": "workflow-root",
        "scope": [
          "root",
          "error",
        ],
        "subType": "state",
        "tag": "state",
        "type": "state",
      },
    ],
    "columnEnd": 1,
    "columnStart": 1,
    "key": "aiml-11",
    "lineEnd": 1,
    "lineStart": 1,
    "scope": [
      "root",
    ],
    "subType": "human-input",
    "tag": "workflow",
    "type": "state",
  },
]
`;
